--- a/app/src/main/res/layout/comment_item_list.xml
+++ b/app/src/main/res/layout/comment_item_list.xml
@@ -13,7 +13,7 @@
             android:id="@+id/comment_list_item_avatar_url"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_margin="25dp"
+            android:layout_margin="20dp"
             android:src="@mipmap/mm" />
 
         <LinearLayout
@@ -27,43 +27,42 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:singleLine="true"
                     android:id="@+id/comment_list_item_username"
-                    android:layout_width="150dp"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="1111111"
+                    android:layout_marginTop="10dp"
                     android:textColor="#000000"
-                    android:textSize="18dp" />
+                    android:textSize="17dp" />
 
                 <TextView
                     android:id="@+id/comment_list_item_create"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="10dp"
                     android:gravity="right"
-                    android:text="shijian"
                     android:textColor="#737171"
-                    android:textSize="18dp" />
+                    android:textSize="15dp" />
             </LinearLayout>
 
             <TextView
                 android:id="@+id/details_list_item_reply"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text=""
+                android:layout_marginTop="3dp"
                 android:textColor="#737171"
-                android:textSize="15dp" />
+                android:textSize="13dp" />
 
             <TextView
                 android:id="@+id/comment_list_item_content"
                 android:layout_width="match_parent"
+                android:layout_marginRight="20dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="pinglun"
+                android:layout_marginTop="3dp"
+                android:maxLines="3"
                 android:textColor="#050505"
-                android:textSize="18dp" />
+                android:textSize="13dp" />
         </LinearLayout>
 
     </LinearLayout>
