--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -5,12 +5,11 @@
 <TextView
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:background="#ff3300"
+    android:background="#000000"
     android:text="新闻"
     android:textColor="@android:color/white"
-    android:textSize="30sp"
-    android:paddingTop="5dp"
-    android:paddingLeft="150dp"
+    android:textSize="25sp"
+    android:gravity="center"
     />
     <android.support.design.widget.TabLayout
         android:id="@+id/fragment_news_tablelayout"
@@ -20,7 +19,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/fragment_news_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1"
         ></android.support.v4.view.ViewPager>
 </LinearLayout>
