--- a/app/src/main/res/layout/activity_progress.xml
+++ b/app/src/main/res/layout/activity_progress.xml
@@ -3,10 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <ListView
+    <com.mingle.widget.LoadingView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/fragment_content_list_view"
-        ></ListView>
+        android:layout_height="match_parent"
+        android:id="@+id/activity_details_progress">
+    </com.mingle.widget.LoadingView>
+
 </LinearLayout>
