--- a/app/src/main/res/layout/carousel_layout.xml
+++ b/app/src/main/res/layout/carousel_layout.xml
@@ -1,18 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/dot_layout">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="280dp"
-        android:id="@+id/viewPager">
+        android:layout_height="360dp"></android.support.v4.view.ViewPager>
 
-    </android.support.v4.view.ViewPager>
-    <GridView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:id="@+id/gv_vampire"></GridView>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:orientation="vertical"
+        android:padding="5dp">
 
-</LinearLayout>
+        <LinearLayout
+            android:id="@+id/dot_layout"
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="2dp"
+            android:orientation="horizontal">
+
+            <GridView
+                android:id="@+id/gv_vampire"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:gravity="center"
+
+                android:stretchMode="columnWidth">
+
+            </GridView>
+
+        </LinearLayout>
+    </LinearLayout>
+
+
+</RelativeLayout>
