--- a/app/src/main/res/layout/activity_myself_collect.xml
+++ b/app/src/main/res/layout/activity_myself_collect.xml
@@ -14,13 +14,13 @@
         android:background="#30a1a1a1"
         android:id="@+id/fragment_myself_collectss"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="40dp"
         android:orientation="horizontal">
 
         <RadioButton
             android:id="@+id/fragment_myself_musician_collect"
             android:layout_width="0dp"
-            android:layout_height="30dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:button="@null"
             android:gravity="center"
@@ -30,7 +30,7 @@
         <RadioButton
             android:id="@+id/fragment_myself_classic_collect"
             android:layout_width="0dp"
-            android:layout_height="30dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:button="@null"
             android:gravity="center"
@@ -40,7 +40,7 @@
         <RadioButton
             android:id="@+id/fragment_myself_content_collect"
             android:layout_width="0dp"
-            android:layout_height="30dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:button="@null"
             android:textColor="@drawable/selector_font"
