--- a/app/src/main/res/layout/fragment_collect_musican.xml
+++ b/app/src/main/res/layout/fragment_collect_musican.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="收藏音乐"/>
-</LinearLayout>
+    <ListView
+        android:id="@+id/fragment_collection_musician_lv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </ListView>
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/fragment_collection_musician_tv"
+        android:text="您还没有该类收藏!"
+        android:textSize="17dp"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+</RelativeLayout>
