--- a/app/src/main/res/layout/fragment_login_yes.xml
+++ b/app/src/main/res/layout/fragment_login_yes.xml
@@ -7,25 +7,11 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@mipmap/travel_selce_city_title_back"
-            android:id="@+id/fragment_login_yes_back"
-            />
-        <ImageView
-            android:id="@+id/backgroud_yes"
-            android:scaleType="fitXY"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
         <LinearLayout
             android:id="@+id/a_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="70dp"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -43,17 +29,18 @@
                     android:src="@mipmap/travel_selce_city_title_imager" />
 
                 <LinearLayout
-                    android:layout_marginTop="3dp"
+                    android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="您好"
+                        android:text="您好:"
                         android:textSize="15sp" />
 
                     <TextView
+                        android:layout_marginLeft="5dp"
                         android:id="@+id/activity_user_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -72,7 +59,7 @@
             android:layout_below="@+id/a_1"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="70dp"
             android:background="@mipmap/ic_background_out"
             android:orientation="vertical">
 
@@ -98,7 +85,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="3dp"
-                android:text="亲爱的EnJoyLife用户您好" />
+                android:text="亲爱的 EnjoyLife 用户您好" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -107,9 +94,10 @@
                 android:text="我们诚挚的为您提供优质的服务" />
 
             <TextView
+                android:autoLink="phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="客服电话:110" />
+                android:text="客服电话: 7777777" />
         </LinearLayout>
     </RelativeLayout>
 
