--- a/app/src/main/res/layout/fragment_myself.xml
+++ b/app/src/main/res/layout/fragment_myself.xml
@@ -1,24 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+                android:background="#ffffff"
     android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/fragment_replace_id"
         android:layout_width="match_parent"
-        android:layout_height="200dp">
-
+        android:layout_height="250dp">
     </FrameLayout>
+    <!--<ImageView-->
+        <!--android:background="@mipmap/seeyou"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_below="@+id/fragment_replace_id"-->
+        <!--android:layout_width="300dp"-->
+        <!--android:layout_marginTop="20dp"-->
+        <!--android:layout_height="90dp"/>-->
+    <TextView
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/fragment_replace_id"
+        android:layout_marginLeft="10dp"
+        android:textSize="13dp"
+        android:layout_marginRight="10dp"
+        android:id="@+id/fragment_myself_dayenglish"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"/>
 
     <LinearLayout
+        android:background="#20c3daff"
+        android:layout_above="@+id/fragment_myself_reply"
         android:id="@+id/fragment_myself_collect"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="10dp"
-        android:background="#e9f1f6"
+        android:layout_marginTop="30dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -34,13 +53,43 @@
     </LinearLayout>
 
     <LinearLayout
+        android:background="#20c3daff"
+
+        android:layout_above="@+id/fragment_myself_set"
+        android:id="@+id/fragment_myself_reply"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:background="@mipmap/mugglreply" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="12dp"
+            android:text="麻瓜客服" />
+    </LinearLayout>
+    <LinearLayout
+        android:background="#20c3daff"
+
+        android:layout_alignParentBottom="true"
         android:id="@+id/fragment_myself_set"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="10dp"
-        android:background="#e9f1f6"
+        android:layout_marginBottom="10dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -58,4 +107,4 @@
             android:layout_marginTop="12dp"
             android:text="设置" />
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
