--- a/app/src/main/res/layout/fragment_news_sports.xml
+++ b/app/src/main/res/layout/fragment_news_sports.xml
@@ -11,4 +11,24 @@
     android:layout_height="match_parent"
     android:id="@+id/fragment_news_sport_lv"></ListView>
     </com.lanou.xuhaijia.enjoylife.news.MySwipeRefreshLayout>
+    <!--
+    <com.lanou.xuhaijia.enjoylife.tools.PullToRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/item_welfare_ptrl"
+    android:orientation="vertical">
+
+    <include layout="@layout/refresh_head"/>
+
+    <com.lanou.xuhaijia.enjoylife.tools.PullableListView
+        android:id="@+id/fragment_welfare_plv"
+        android:layout_width="match_parent"
+        android:divider="@null"
+        android:layout_height="match_parent">
+    </com.lanou.xuhaijia.enjoylife.tools.PullableListView>
+
+    <include layout="@layout/load_more"/>
+
+</com.lanou.xuhaijia.enjoylife.tools.PullToRefreshLayout>-->
 </LinearLayout>
