--- a/app/src/main/res/layout/item_news_headline.xml
+++ b/app/src/main/res/layout/item_news_headline.xml
@@ -17,9 +17,9 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="4dp"
+        android:layout_height="73dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="5dp"
         android:orientation="vertical">
 
@@ -27,7 +27,9 @@
             android:id="@+id/item_news_headline_tv"
             android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:layout_marginTop="3dp"
             android:text="tilie"
+            android:textSize="13sp"
             android:textColor="@android:color/black" />
 
         <RelativeLayout
