--- a/app/src/main/res/layout/item_news_sport.xml
+++ b/app/src/main/res/layout/item_news_sport.xml
@@ -2,54 +2,61 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:paddingBottom="8dp">
-    <ImageView
-        android:id="@+id/item_news_sport_img"
-        android:layout_width="80dp"
-        android:layout_height="70dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:scaleType="fitXY"
-        android:src="@mipmap/ic_launcher"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="2dp"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/item_news_sport_tv"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:textSize="13sp"
-            android:text="tilie"
-            android:textColor="#211d1d" />
+        <ImageView
+            android:id="@+id/item_news_sport_img"
+            android:layout_width="80dp"
+            android:layout_height="70dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:scaleType="fitXY"
+            android:src="@mipmap/ic_launcher" />
 
-        <RelativeLayout
-            android:layout_marginTop="15dp"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="15dp"
-            android:orientation="horizontal">
+            android:layout_height="70dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:orientation="vertical">
 
             <TextView
-                android:textSize="10sp"
-                android:id="@+id/item_news_sport_source"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="来源" />
+                android:id="@+id/item_news_sport_tv"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:text="tilie"
+                android:layout_marginTop="3dp"
+                android:textColor="#211d1d"
+                android:textSize="13sp" />
 
-            <TextView
-                android:id="@+id/item_news_sport_replycont"
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:textSize="10sp"
-                android:text="跟帖" />
-        </RelativeLayout>
+                android:layout_height="15dp"
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/item_news_sport_source"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="来源"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/item_news_sport_replycont"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:text="跟帖"
+                    android:textSize="10sp" />
+            </RelativeLayout>
+        </LinearLayout>
     </LinearLayout>
-
 </LinearLayout>
